--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
       },
       "GENERIC_TIMEZONE": {
         "description": "Time Zone to use with Heroku. You can find the name of your timezone here: https://momentjs.com/timezone/",
-        "value": "Europe/Berlin"
+        "value": "America/Chicago"
       },
       "N8N_BASIC_AUTH_USER": {
         "description": "Basic Authentication User for n8n",
@@ -30,7 +30,7 @@
       },
       "N8N_ENCRYPTION_KEY": {
         "description": "This is to set the n8n encryption key to a static value, so that heroku doesnt override it, causing AUTH to fail",
-        "value": "MdRRn2jiZuVeh5tI77A6"
+        "value": "MdRRn2iw3ubnfyyhneDD3fvfq2"
       },
       "PGSSLMODE": {
         "description": "Heroku made a change so SSL is required to connect to Postgres",
@@ -42,7 +42,7 @@
       },
       "WEBHOOK_URL": {
         "description": "Your app could be published to any domain, without specifying n8n will think that it's hosted on localhost (and it could break some scenarions ",
-        "value": "https://<appname>.herokuapp.com"
+        "value": "https://n8n.loticdigital.com"
       }
     },
     "formation": {
